Update home.html homepage nav bar

--- a/home.html
+++ b/home.html
@@ -48,13 +48,25 @@
                     </ul>
 
                     <div class="nav__buttons">
-                        <a href="#" class="nav__button-link">Login</a>
-                        <a href="#" class="nav__button-ghost">Get Started</a>
-                    </div>
+                        <a
+                            href="#"
+                            class="nav__button-ghost"
+                            id="nav__button-ghost_"
+                        ></a>
+                        <a
+                            href="#"
+                            class="nav__button-ghost"
+                            id="nav__button-ghost_"
+                        ></a>
+                        <a
+                            href="#"
+                            class="nav__button-ghost"
+                            id="nav__button-ghost_"
+                        ></a>
 
-                    <!-- Close button -->
-                    <div class="nav__close" id="nav-close">
-                        <i class="ri-close-line"></i>
+                        <div class="nav__close" id="nav-close">
+                            <i class="ri-close-line"></i>
+                        </div>
                     </div>
                 </div>
 
@@ -71,9 +83,7 @@
             <section class="home">
                 <div class="home__container container">
                     <div class="home__content">
-                        <div class="home__data">
-
-                        </div>
+                        <div class="home__data"></div>
                     </div>
                     <div class="home__images">
                         <img
