Update index.html Reuploaded

--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
                             alt="image"
                             class="home_img-2"
                         />
-                        <img
+                        <!-- <img
                             src="assets/img/img-1.svg"
                             alt="image"
                             class="home_img-1"
-                        />
+                        /> -->
                     </div>
                 </div>
             </section>
