--- a/home.html
+++ b/home.html
@@ -34,7 +34,9 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Home</a>
+                            <a href="#" class="nav__link">Home 
+                                <i class="ri-check-double-line"></i
+                            ></a>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__link">About</a>
