--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Home</a>
+                            <a href="#" class="nav__link">Home </a>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__link">About</a>
@@ -48,8 +48,10 @@
                     </ul>
 
                     <div class="nav__buttons">
-                        <a href="#" class="nav__button-link">Login</a>
-                        <a href="#" class="nav__button-ghost">Get Started</a>
+                        <a href="login.html" class="nav__button-link">Login</a>
+                        <a href="signup.html" class="nav__button-ghost"
+                            >Get Started</a
+                        >
                     </div>
 
                     <!-- Close button -->
@@ -84,7 +86,9 @@
                                 Winning Souls through music...
                                 <i class="ri-disc-fill"></i>
                             </p>
-                            <a href="" class="home__button"> Explore Us! </a>
+                            <a href="login.html" class="home__button">
+                                Explore Us!
+                            </a>
                         </div>
 
                         <img
