--- a/home.html
+++ b/home.html
@@ -34,18 +34,18 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Home 
-                                <i class="ri-check-double-line"></i
+                            <a href="#" class="nav__link"
+                                >Home <i class="ri-check-double-line"></i
                             ></a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">About</a>
+                            <a href="about.html" class="nav__link">About</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Events</a>
+                            <a href="events.html" class="nav__link">Events</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Contact</a>
+                            <a href="contact.html" class="nav__link">Contact</a>
                         </li>
                     </ul>
 
